fixed signup alignment issue

--- a/src/screens/Authenticate/Authenticate.module.css
+++ b/src/screens/Authenticate/Authenticate.module.css
@@ -5,16 +5,16 @@
 
 .header {
   width: 100%;
-  height: 66px;
+  height: 48px;
   border-bottom: 1px solid rgba(40, 106, 222, 0.25);
 }
 
 .logoImage {
-  height: 32px;
+  height: 28px;
 }
 
 .footer {
-  padding-bottom: 5px;
+  padding-bottom: 2px;
 }
 
 .footer__text {
