--- a/src/screens/Signup/Signup.module.css
+++ b/src/screens/Signup/Signup.module.css
@@ -7,7 +7,7 @@
   height: auto;
 
   padding: 18px 36px;
-  margin: 64px auto 24px;
+  margin: 12px auto 8px;
 
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
